k8s/avatar-svc.yml
kind: Service
apiVersion: v1
metadata:
  name:  initials-avatar
  namespace: vccloud
spec:
  selector:
    app: initials-avatar
  type: ClusterIP
  ports:
  - name:  web-port
    port:  80
    targetPort:  3000
